# SMBShareInspector

./: .gitignore  README.md  main.py  pyproject.toml
SMBShareInspector/: DescribeSDDL.py  app.py
