[project]
name = "SMBShareInspector"
version = "0.1.0"
description = "List SMB shares and their Access Control Lists (ACLs) on a remote system"
readme = "README.md"
authors = [
    {name = "CobblePot59", email = "CobblePot59@"}
]

requires-python = ">=3.13"
dependencies = [
    "aiosmb (>=0.4.11,<0.5.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
SMBShareInspector = "SMBShareInspector.app:main"
